# iot-server-book-code

./: README.md  url.md
1-m5atomlite_lchika/: platformio.ini
1.3-m5atomlite_lchika/src/: main.cpp
1.3-m5stack_atomlite_lchika/: platformio.ini
1.3-m5stack_atomlite_lchika/src/: main.cpp
1.4-ir_receive/: platformio.ini
1.4-ir_receive/src/: main.cpp
1.5-ir_send/src/: main.cpp
1.5-m5atom_ir_send/src/: main.cpp
1.6.1-connect_wifi/src/: main.cpp
1.6.3-web_server/src/: main.cpp
1.7-json_webapi/: platformio.ini  test_receive.sh
1.7-json_webapi/src/: main.cpp
2-m5atom_ir/: platformio.ini
2-m5atom_ir/src/: main.cpp
2.3-m5stack_atomlite_lchika/: platformio.ini
2.4-ir_receive/: platformio.ini
2.4-ir_receive/src/: main.cpp
2.5-ir_send/: platformio.ini
2.5-ir_send/src/: main.cpp
2.6.2-connect_wifi/src/: main.cpp
2.6.3-web_server/: test_send.sh
2.6.3-web_server/src/: main.cpp
2.7-json_webapi/: platformio.ini  test_send.sh
2.7-json_webapi/src/: main.cpp
3.2-stremlit_environment/: README.md  pyproject.toml
3.2-stremlit_environment/src/_3_2_stremlit_environment/: __init__.py
3.3-streamlit_concept/: README.md  launch.sh  pyproject.toml
3.3-streamlit_concept/src/: app.py
3.4-webapi_button/: README.md
3.4-webapi_button/src/: app.py
6.3-sht30/: platformio.ini  test_sht30.sh
6.3-sht30/src/: main.cpp
6.5-ch9329/: test_enter.sh
6.5-ch9329/src/: main.cpp
7.3-container/: Dockerfile  README.md  build.sh
7.3-container/systemd/: streamlit.service
7.5-domain/aws-policy/: lego-letsencrypt.json  update-ddns.json
7.5-domain/ddns-route53/: ddns-route53.yml
7.5-domain/lego/: .gitignore  lego_renew.sh  lego_run.sh
7.5-domain/nginx/: compose.yml
7.5-domain/nginx/conf/: nginx.conf
7.5-domain/systemd/: ddns-route53.service  lego-hs74th.service  lego-hs74th.timer  nginx-hs74th.service
7.6-google_auth/: README.md  compose.yml  pyproject.toml
7.6-google_auth/oauth2-proxy/: authenticated-emails.txt  oauth2-proxy.cfg
7.6-google_auth/systemd/: streamlit.service
