[project]
name = "3-4-webapi-button"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Atsushi Morimoto (74th)", email = "74th.tech@gmail.com" }
]
dependencies = [
    "streamlit>=1.38.0",
    "httpx>=0.27.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.8",
]

